--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,11 @@
 {
   "tabWidth": 2,
   "useTabs": true,
+  "printWidth": 80,
+  "twigPrintWidth": 80,
   "semi": true,
   "singleQuote": true,
+  "twigSingleQuote": true,
   "jsxSingleQuote": true,
   "quoteProps": "as-needed",
   "trailingComma": "none",
@@ -11,5 +14,11 @@
   "arrowParens": "avoid",
   "embeddedLanguageFormatting": "auto",
   "vueIndentScriptAndStyle": true,
-  "htmlWhitespaceSensitivity": "strict"
+  "htmlWhitespaceSensitivity": "strict",
+  "twigAlwaysBreakObjects": false,
+  "twigFollowOfficialCodingStandards": true,
+  "twigOutputEndblockName": false,
+  "plugins": [
+    "./node_modules/prettier-plugin-twig-melody"
+  ]
 }
